// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/notification > { locale: "en" } snapshot test > ({ isAdmin: true }) renders Edit button 1`] = `
<table
  class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
>
  <!--v-if-->
  <thead
    class="relative"
  >
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          Title
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
        scope="col"
      >
        
        <span>
          Date
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          Edit
        </span>
        
      </th>
      
    </tr>
    <!--v-if-->
  </thead>
  <tbody
    class="divide-y divide-gray-200 dark:divide-gray-800"
  >
    
    
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_7"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              description="下記の譜面情報を追加しました。

- [新曲](/song/foo)"
              id="headlessui-disclosure-button-nJ8nXj3gjHd_6"
              type="button"
            >
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
              />
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                新曲を追加しました
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_7"
                >
                  
                  <!-- eslint-disable-next-line vue/no-v-html -->
                  <p>
                    <p>
                      下記の譜面情報を追加しました。
                    </p>
                    

                    <ul>
                      

                      <li>
                        <a
                          href="/song/foo"
                        >
                          新曲
                        </a>
                      </li>
                      

                    </ul>
                    

                  </p>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        Thu, 13 Aug 2020 00:00:00 GMT
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        
        <a
          class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 shadow-sm text-white dark:text-gray-900 bg-primary-500 hover:bg-primary-600 disabled:bg-primary-500 dark:bg-primary-400 dark:hover:bg-primary-500 dark:disabled:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-500 dark:focus-visible:outline-primary-400 inline-flex items-center"
          href="/admin/notification/foo"
        >
          
          
          <span
            aria-hidden="true"
            class="iconify i-heroicons:pencil-square flex-shrink-0 h-5 w-5"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
          
        </a>
        
        
      </td>
      
    </tr>
    <!--v-if-->
    
    
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_9"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              description="このWebサイトはベータ版環境です。"
              id="headlessui-disclosure-button-nJ8nXj3gjHd_8"
              type="button"
            >
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:exclamation-triangle flex-shrink-0 h-5 w-5"
              />
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                このサイトはベータ版です
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_9"
                >
                  
                  <!-- eslint-disable-next-line vue/no-v-html -->
                  <p>
                    <p>
                      このWebサイトはベータ版環境です。
                    </p>
                    

                  </p>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        Sat, 01 Aug 2020 03:00:00 GMT
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        
        <a
          class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 shadow-sm text-white dark:text-gray-900 bg-primary-500 hover:bg-primary-600 disabled:bg-primary-500 dark:bg-primary-400 dark:hover:bg-primary-500 dark:disabled:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-500 dark:focus-visible:outline-primary-400 inline-flex items-center"
          href="/admin/notification/bar"
        >
          
          
          <span
            aria-hidden="true"
            class="iconify i-heroicons:pencil-square flex-shrink-0 h-5 w-5"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
          
        </a>
        
        
      </td>
      
    </tr>
    <!--v-if-->
    
    
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_11"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              description="変更点は以下を参照してください。"
              id="headlessui-disclosure-button-nJ8nXj3gjHd_10"
              type="button"
            >
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
              />
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                v0.6.0をリリースしました
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_11"
                >
                  
                  <!-- eslint-disable-next-line vue/no-v-html -->
                  <p>
                    <p>
                      変更点は以下を参照してください。
                    </p>
                    

                  </p>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        Tue, 11 Aug 2020 03:00:00 GMT
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        
        <a
          class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 shadow-sm text-white dark:text-gray-900 bg-primary-500 hover:bg-primary-600 disabled:bg-primary-500 dark:bg-primary-400 dark:hover:bg-primary-500 dark:disabled:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-500 dark:focus-visible:outline-primary-400 inline-flex items-center"
          href="/admin/notification/baz"
        >
          
          
          <span
            aria-hidden="true"
            class="iconify i-heroicons:pencil-square flex-shrink-0 h-5 w-5"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
          
        </a>
        
        
      </td>
      
    </tr>
    <!--v-if-->
    
    
  </tbody>
</table>
`;

exports[`/notification > { locale: "en" } snapshot test > ({ loading: true }) renders loading state 1`] = `
<table
  class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
>
  <!--v-if-->
  <thead
    class="relative"
  >
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          Title
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
        scope="col"
      >
        
        <span>
          Date
        </span>
        
      </th>
      
    </tr>
    <tr>
      <td
        class="absolute inset-x-0 -bottom-[0.5px] p-0"
        colspan="0"
      >
        <div
          class="w-full flex flex-col gap-2"
          data-v-fdc1e98e=""
          role="progressbar"
        >
          <!--v-if-->
          <progress
            class="block appearance-none border-none overflow-hidden w-full [&::-webkit-progress-bar]:w-full h-px rounded-full [&::-webkit-progress-bar]:rounded-full [&::-webkit-progress-bar]:bg-gray-200 [&::-webkit-progress-bar]:dark:bg-gray-700 [@supports(selector(&::-moz-progress-bar))]:bg-gray-200 [@supports(selector(&::-moz-progress-bar))]:dark:bg-gray-700 [&::-webkit-progress-value]:rounded-full [&::-webkit-progress-value]:transition-all [&::-webkit-progress-value]:ease-in-out [&::-moz-progress-bar]:rounded-full text-primary-500 dark:text-primary-400 [&::-webkit-progress-value]:bg-current [&::-moz-progress-bar]:bg-current indeterminate:relative indeterminate:after:rounded-full [&:indeterminate::-webkit-progress-value]:rounded-full [&:indeterminate::-moz-progress-bar]:rounded-full bar-animation-carousel"
            data-v-fdc1e98e=""
          />
          <!--v-if-->
        </div>
      </td>
    </tr>
  </thead>
  <tbody
    class="divide-y divide-gray-200 dark:divide-gray-800"
  >
    <tr>
      <td
        colspan="2"
      >
        
        <div
          class="flex flex-col items-center justify-center flex-1 px-6 py-14 sm:px-14"
        >
          <span
            aria-hidden="true"
            class="iconify i-heroicons:arrow-path-20-solid w-6 h-6 mx-auto text-gray-400 dark:text-gray-500 mb-4 animate-spin"
          />
          <p
            class="text-sm text-center text-gray-900 dark:text-white"
          >
            Loading...
          </p>
        </div>
        
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`/notification > { locale: "en" } snapshot test > ({ messages: [...] }) renders notification 1`] = `
<div
  class="flex flex-col lg:grid lg:grid-cols-10 lg:gap-8"
>
  <!--v-if-->
  <div
    class="lg:col-span-10"
  >
    
    <div
      class="relative border-b border-gray-200 dark:border-gray-800 py-8"
    >
      <!--v-if-->
      <div
        class="flex flex-col lg:flex-row items-start gap-6"
      >
        <!--v-if-->
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col lg:flex-row lg:items-center lg:justify-between"
          >
            <h1
              class="text-3xl sm:text-4xl font-bold text-gray-900 dark:text-white tracking-tight"
            >
              
              All Notification List
              
            </h1>
            <!--v-if-->
          </div>
          <!--v-if-->
          
          
        </div>
      </div>
    </div>
    <div
      class="mt-8 pb-24"
    >
      
      <div
        class="relative overflow-x-auto"
      >
        <table
          class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
        >
          <!--v-if-->
          <thead
            class="relative"
          >
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <th
                class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
                scope="col"
              >
                
                <span>
                  Title
                </span>
                
              </th>
              <th
                class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
                scope="col"
              >
                
                <span>
                  Date
                </span>
                
              </th>
              
            </tr>
            <!--v-if-->
          </thead>
          <tbody
            class="divide-y divide-gray-200 dark:divide-gray-800"
          >
            
            
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                <div
                  class="w-full flex flex-col"
                >
                  
                  <div
                    class="w-full flex flex-col"
                    data-headlessui-state=""
                  >
                    <button
                      aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_1"
                      aria-expanded="false"
                      class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
                      data-headlessui-state=""
                      description="下記の譜面情報を追加しました。

- [新曲](/song/foo)"
                      id="headlessui-disclosure-button-nJ8nXj3gjHd_0"
                      type="button"
                    >
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
                      />
                      
                      
                      <span
                        class="text-left break-all line-clamp-1"
                      >
                        新曲を追加しました
                      </span>
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
                      />
                      
                      
                    </button>
                    <transition-stub
                      appear="false"
                      css="true"
                      enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      persisted="false"
                    >
                      <div
                        style="display: none;"
                      >
                        <div
                          class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                          data-headlessui-state=""
                          id="headlessui-disclosure-panel-nJ8nXj3gjHd_1"
                        >
                          
                          <!-- eslint-disable-next-line vue/no-v-html -->
                          <p>
                            <p>
                              下記の譜面情報を追加しました。
                            </p>
                            

                            <ul>
                              

                              <li>
                                <a
                                  href="/song/foo"
                                >
                                  新曲
                                </a>
                              </li>
                              

                            </ul>
                            

                          </p>
                          
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                  
                </div>
                
              </td>
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                Thu, 13 Aug 2020 00:00:00 GMT
                
              </td>
              
            </tr>
            <!--v-if-->
            
            
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                <div
                  class="w-full flex flex-col"
                >
                  
                  <div
                    class="w-full flex flex-col"
                    data-headlessui-state=""
                  >
                    <button
                      aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_3"
                      aria-expanded="false"
                      class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
                      data-headlessui-state=""
                      description="このWebサイトはベータ版環境です。"
                      id="headlessui-disclosure-button-nJ8nXj3gjHd_2"
                      type="button"
                    >
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:exclamation-triangle flex-shrink-0 h-5 w-5"
                      />
                      
                      
                      <span
                        class="text-left break-all line-clamp-1"
                      >
                        このサイトはベータ版です
                      </span>
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
                      />
                      
                      
                    </button>
                    <transition-stub
                      appear="false"
                      css="true"
                      enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      persisted="false"
                    >
                      <div
                        style="display: none;"
                      >
                        <div
                          class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                          data-headlessui-state=""
                          id="headlessui-disclosure-panel-nJ8nXj3gjHd_3"
                        >
                          
                          <!-- eslint-disable-next-line vue/no-v-html -->
                          <p>
                            <p>
                              このWebサイトはベータ版環境です。
                            </p>
                            

                          </p>
                          
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                  
                </div>
                
              </td>
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                Sat, 01 Aug 2020 03:00:00 GMT
                
              </td>
              
            </tr>
            <!--v-if-->
            
            
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                <div
                  class="w-full flex flex-col"
                >
                  
                  <div
                    class="w-full flex flex-col"
                    data-headlessui-state=""
                  >
                    <button
                      aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_5"
                      aria-expanded="false"
                      class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
                      data-headlessui-state=""
                      description="変更点は以下を参照してください。"
                      id="headlessui-disclosure-button-nJ8nXj3gjHd_4"
                      type="button"
                    >
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
                      />
                      
                      
                      <span
                        class="text-left break-all line-clamp-1"
                      >
                        v0.6.0をリリースしました
                      </span>
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
                      />
                      
                      
                    </button>
                    <transition-stub
                      appear="false"
                      css="true"
                      enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      persisted="false"
                    >
                      <div
                        style="display: none;"
                      >
                        <div
                          class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                          data-headlessui-state=""
                          id="headlessui-disclosure-panel-nJ8nXj3gjHd_5"
                        >
                          
                          <!-- eslint-disable-next-line vue/no-v-html -->
                          <p>
                            <p>
                              変更点は以下を参照してください。
                            </p>
                            

                          </p>
                          
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                  
                </div>
                
              </td>
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                Tue, 11 Aug 2020 03:00:00 GMT
                
              </td>
              
            </tr>
            <!--v-if-->
            
            
          </tbody>
        </table>
      </div>
      
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`/notification > { locale: "en" } snapshot test > ({ messages: [] }) renders no notification 1`] = `
<table
  class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
>
  <!--v-if-->
  <thead
    class="relative"
  >
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          Title
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
        scope="col"
      >
        
        <span>
          Date
        </span>
        
      </th>
      
    </tr>
    <!--v-if-->
  </thead>
  <tbody
    class="divide-y divide-gray-200 dark:divide-gray-800"
  >
    <tr>
      <td
        colspan="2"
      >
        
        <div
          class="flex flex-col items-center justify-center flex-1 px-6 py-14 sm:px-14"
        >
          <span
            aria-hidden="true"
            class="iconify i-heroicons:circle-stack-20-solid w-6 h-6 mx-auto text-gray-400 dark:text-gray-500 mb-4"
          />
          <p
            class="text-sm text-center text-gray-900 dark:text-white"
          >
            No items.
          </p>
        </div>
        
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`/notification > { locale: "ja" } snapshot test > ({ isAdmin: true }) renders Edit button 1`] = `
<table
  class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
>
  <!--v-if-->
  <thead
    class="relative"
  >
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          タイトル
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
        scope="col"
      >
        
        <span>
          投稿日時
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          Edit
        </span>
        
      </th>
      
    </tr>
    <!--v-if-->
  </thead>
  <tbody
    class="divide-y divide-gray-200 dark:divide-gray-800"
  >
    
    
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_19"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              description="下記の譜面情報を追加しました。

- [新曲](/song/foo)"
              id="headlessui-disclosure-button-nJ8nXj3gjHd_18"
              type="button"
            >
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
              />
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                新曲を追加しました
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_19"
                >
                  
                  <!-- eslint-disable-next-line vue/no-v-html -->
                  <p>
                    <p>
                      下記の譜面情報を追加しました。
                    </p>
                    

                    <ul>
                      

                      <li>
                        <a
                          href="/song/foo"
                        >
                          新曲
                        </a>
                      </li>
                      

                    </ul>
                    

                  </p>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        Thu, 13 Aug 2020 00:00:00 GMT
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        
        <a
          class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 shadow-sm text-white dark:text-gray-900 bg-primary-500 hover:bg-primary-600 disabled:bg-primary-500 dark:bg-primary-400 dark:hover:bg-primary-500 dark:disabled:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-500 dark:focus-visible:outline-primary-400 inline-flex items-center"
          href="/admin/notification/foo"
        >
          
          
          <span
            aria-hidden="true"
            class="iconify i-heroicons:pencil-square flex-shrink-0 h-5 w-5"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
          
        </a>
        
        
      </td>
      
    </tr>
    <!--v-if-->
    
    
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_21"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              description="このWebサイトはベータ版環境です。"
              id="headlessui-disclosure-button-nJ8nXj3gjHd_20"
              type="button"
            >
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:exclamation-triangle flex-shrink-0 h-5 w-5"
              />
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                このサイトはベータ版です
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_21"
                >
                  
                  <!-- eslint-disable-next-line vue/no-v-html -->
                  <p>
                    <p>
                      このWebサイトはベータ版環境です。
                    </p>
                    

                  </p>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        Sat, 01 Aug 2020 03:00:00 GMT
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        
        <a
          class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 shadow-sm text-white dark:text-gray-900 bg-primary-500 hover:bg-primary-600 disabled:bg-primary-500 dark:bg-primary-400 dark:hover:bg-primary-500 dark:disabled:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-500 dark:focus-visible:outline-primary-400 inline-flex items-center"
          href="/admin/notification/bar"
        >
          
          
          <span
            aria-hidden="true"
            class="iconify i-heroicons:pencil-square flex-shrink-0 h-5 w-5"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
          
        </a>
        
        
      </td>
      
    </tr>
    <!--v-if-->
    
    
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_23"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              description="変更点は以下を参照してください。"
              id="headlessui-disclosure-button-nJ8nXj3gjHd_22"
              type="button"
            >
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
              />
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                v0.6.0をリリースしました
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_23"
                >
                  
                  <!-- eslint-disable-next-line vue/no-v-html -->
                  <p>
                    <p>
                      変更点は以下を参照してください。
                    </p>
                    

                  </p>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        Tue, 11 Aug 2020 03:00:00 GMT
        
      </td>
      <td
        class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
      >
        
        
        <a
          class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 shadow-sm text-white dark:text-gray-900 bg-primary-500 hover:bg-primary-600 disabled:bg-primary-500 dark:bg-primary-400 dark:hover:bg-primary-500 dark:disabled:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-500 dark:focus-visible:outline-primary-400 inline-flex items-center"
          href="/admin/notification/baz"
        >
          
          
          <span
            aria-hidden="true"
            class="iconify i-heroicons:pencil-square flex-shrink-0 h-5 w-5"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
          
        </a>
        
        
      </td>
      
    </tr>
    <!--v-if-->
    
    
  </tbody>
</table>
`;

exports[`/notification > { locale: "ja" } snapshot test > ({ loading: true }) renders loading state 1`] = `
<table
  class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
>
  <!--v-if-->
  <thead
    class="relative"
  >
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          タイトル
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
        scope="col"
      >
        
        <span>
          投稿日時
        </span>
        
      </th>
      
    </tr>
    <tr>
      <td
        class="absolute inset-x-0 -bottom-[0.5px] p-0"
        colspan="0"
      >
        <div
          class="w-full flex flex-col gap-2"
          data-v-fdc1e98e=""
          role="progressbar"
        >
          <!--v-if-->
          <progress
            class="block appearance-none border-none overflow-hidden w-full [&::-webkit-progress-bar]:w-full h-px rounded-full [&::-webkit-progress-bar]:rounded-full [&::-webkit-progress-bar]:bg-gray-200 [&::-webkit-progress-bar]:dark:bg-gray-700 [@supports(selector(&::-moz-progress-bar))]:bg-gray-200 [@supports(selector(&::-moz-progress-bar))]:dark:bg-gray-700 [&::-webkit-progress-value]:rounded-full [&::-webkit-progress-value]:transition-all [&::-webkit-progress-value]:ease-in-out [&::-moz-progress-bar]:rounded-full text-primary-500 dark:text-primary-400 [&::-webkit-progress-value]:bg-current [&::-moz-progress-bar]:bg-current indeterminate:relative indeterminate:after:rounded-full [&:indeterminate::-webkit-progress-value]:rounded-full [&:indeterminate::-moz-progress-bar]:rounded-full bar-animation-carousel"
            data-v-fdc1e98e=""
          />
          <!--v-if-->
        </div>
      </td>
    </tr>
  </thead>
  <tbody
    class="divide-y divide-gray-200 dark:divide-gray-800"
  >
    <tr>
      <td
        colspan="2"
      >
        
        <div
          class="flex flex-col items-center justify-center flex-1 px-6 py-14 sm:px-14"
        >
          <span
            aria-hidden="true"
            class="iconify i-heroicons:arrow-path-20-solid w-6 h-6 mx-auto text-gray-400 dark:text-gray-500 mb-4 animate-spin"
          />
          <p
            class="text-sm text-center text-gray-900 dark:text-white"
          >
            Loading...
          </p>
        </div>
        
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`/notification > { locale: "ja" } snapshot test > ({ messages: [...] }) renders notification 1`] = `
<div
  class="flex flex-col lg:grid lg:grid-cols-10 lg:gap-8"
>
  <!--v-if-->
  <div
    class="lg:col-span-10"
  >
    
    <div
      class="relative border-b border-gray-200 dark:border-gray-800 py-8"
    >
      <!--v-if-->
      <div
        class="flex flex-col lg:flex-row items-start gap-6"
      >
        <!--v-if-->
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col lg:flex-row lg:items-center lg:justify-between"
          >
            <h1
              class="text-3xl sm:text-4xl font-bold text-gray-900 dark:text-white tracking-tight"
            >
              
              お知らせ一覧
              
            </h1>
            <!--v-if-->
          </div>
          <!--v-if-->
          
          
        </div>
      </div>
    </div>
    <div
      class="mt-8 pb-24"
    >
      
      <div
        class="relative overflow-x-auto"
      >
        <table
          class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
        >
          <!--v-if-->
          <thead
            class="relative"
          >
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <th
                class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
                scope="col"
              >
                
                <span>
                  タイトル
                </span>
                
              </th>
              <th
                class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
                scope="col"
              >
                
                <span>
                  投稿日時
                </span>
                
              </th>
              
            </tr>
            <!--v-if-->
          </thead>
          <tbody
            class="divide-y divide-gray-200 dark:divide-gray-800"
          >
            
            
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                <div
                  class="w-full flex flex-col"
                >
                  
                  <div
                    class="w-full flex flex-col"
                    data-headlessui-state=""
                  >
                    <button
                      aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_13"
                      aria-expanded="false"
                      class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
                      data-headlessui-state=""
                      description="下記の譜面情報を追加しました。

- [新曲](/song/foo)"
                      id="headlessui-disclosure-button-nJ8nXj3gjHd_12"
                      type="button"
                    >
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
                      />
                      
                      
                      <span
                        class="text-left break-all line-clamp-1"
                      >
                        新曲を追加しました
                      </span>
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
                      />
                      
                      
                    </button>
                    <transition-stub
                      appear="false"
                      css="true"
                      enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      persisted="false"
                    >
                      <div
                        style="display: none;"
                      >
                        <div
                          class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                          data-headlessui-state=""
                          id="headlessui-disclosure-panel-nJ8nXj3gjHd_13"
                        >
                          
                          <!-- eslint-disable-next-line vue/no-v-html -->
                          <p>
                            <p>
                              下記の譜面情報を追加しました。
                            </p>
                            

                            <ul>
                              

                              <li>
                                <a
                                  href="/song/foo"
                                >
                                  新曲
                                </a>
                              </li>
                              

                            </ul>
                            

                          </p>
                          
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                  
                </div>
                
              </td>
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                Thu, 13 Aug 2020 00:00:00 GMT
                
              </td>
              
            </tr>
            <!--v-if-->
            
            
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                <div
                  class="w-full flex flex-col"
                >
                  
                  <div
                    class="w-full flex flex-col"
                    data-headlessui-state=""
                  >
                    <button
                      aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_15"
                      aria-expanded="false"
                      class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
                      data-headlessui-state=""
                      description="このWebサイトはベータ版環境です。"
                      id="headlessui-disclosure-button-nJ8nXj3gjHd_14"
                      type="button"
                    >
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:exclamation-triangle flex-shrink-0 h-5 w-5"
                      />
                      
                      
                      <span
                        class="text-left break-all line-clamp-1"
                      >
                        このサイトはベータ版です
                      </span>
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
                      />
                      
                      
                    </button>
                    <transition-stub
                      appear="false"
                      css="true"
                      enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      persisted="false"
                    >
                      <div
                        style="display: none;"
                      >
                        <div
                          class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                          data-headlessui-state=""
                          id="headlessui-disclosure-panel-nJ8nXj3gjHd_15"
                        >
                          
                          <!-- eslint-disable-next-line vue/no-v-html -->
                          <p>
                            <p>
                              このWebサイトはベータ版環境です。
                            </p>
                            

                          </p>
                          
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                  
                </div>
                
              </td>
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                Sat, 01 Aug 2020 03:00:00 GMT
                
              </td>
              
            </tr>
            <!--v-if-->
            
            
            <tr
              class=""
            >
              <!--v-if-->
              <!--v-if-->
              
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                <div
                  class="w-full flex flex-col"
                >
                  
                  <div
                    class="w-full flex flex-col"
                    data-headlessui-state=""
                  >
                    <button
                      aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_17"
                      aria-expanded="false"
                      class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-primary-500 dark:text-primary-400 bg-primary-50 hover:bg-primary-100 disabled:bg-primary-50 dark:bg-primary-950 dark:hover:bg-primary-900 dark:disabled:bg-primary-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center mb-1.5 w-full"
                      data-headlessui-state=""
                      description="変更点は以下を参照してください。"
                      id="headlessui-disclosure-button-nJ8nXj3gjHd_16"
                      type="button"
                    >
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:musical-note flex-shrink-0 h-5 w-5"
                      />
                      
                      
                      <span
                        class="text-left break-all line-clamp-1"
                      >
                        v0.6.0をリリースしました
                      </span>
                      
                      
                      <span
                        aria-hidden="true"
                        class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
                      />
                      
                      
                    </button>
                    <transition-stub
                      appear="false"
                      css="true"
                      enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
                      persisted="false"
                    >
                      <div
                        style="display: none;"
                      >
                        <div
                          class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                          data-headlessui-state=""
                          id="headlessui-disclosure-panel-nJ8nXj3gjHd_17"
                        >
                          
                          <!-- eslint-disable-next-line vue/no-v-html -->
                          <p>
                            <p>
                              変更点は以下を参照してください。
                            </p>
                            

                          </p>
                          
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                  
                </div>
                
              </td>
              <td
                class="whitespace-nowrap px-2 py-2 text-gray-500 dark:text-gray-400 text-sm"
              >
                
                Tue, 11 Aug 2020 03:00:00 GMT
                
              </td>
              
            </tr>
            <!--v-if-->
            
            
          </tbody>
        </table>
      </div>
      
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`/notification > { locale: "ja" } snapshot test > ({ messages: [] }) renders no notification 1`] = `
<table
  class="min-w-full table-fixed divide-y divide-gray-300 dark:divide-gray-700"
>
  <!--v-if-->
  <thead
    class="relative"
  >
    <tr
      class=""
    >
      <!--v-if-->
      <!--v-if-->
      
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm"
        scope="col"
      >
        
        <span>
          タイトル
        </span>
        
      </th>
      <th
        class="text-left rtl:text-right px-4 py-3.5 text-gray-900 dark:text-white font-semibold text-sm w-80"
        scope="col"
      >
        
        <span>
          投稿日時
        </span>
        
      </th>
      
    </tr>
    <!--v-if-->
  </thead>
  <tbody
    class="divide-y divide-gray-200 dark:divide-gray-800"
  >
    <tr>
      <td
        colspan="2"
      >
        
        <div
          class="flex flex-col items-center justify-center flex-1 px-6 py-14 sm:px-14"
        >
          <span
            aria-hidden="true"
            class="iconify i-heroicons:circle-stack-20-solid w-6 h-6 mx-auto text-gray-400 dark:text-gray-500 mb-4"
          />
          <p
            class="text-sm text-center text-gray-900 dark:text-white"
          >
            No items.
          </p>
        </div>
        
      </td>
    </tr>
  </tbody>
</table>
`;
